--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 	text-size-adjust: none;
 	-webkit-text-size-adjust: none;
 }
-	
+
 body {
 	font-family: serif;
 	margin: 0;
@@ -14,13 +14,17 @@ body {
 	line-height: 1.3;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
 	font-family: sans-serif;
 	font-size: 1em;
 	margin: 1rem 0;
 }
 
-ul[role=list], ol[role=list] {
+ul[role='list'],
+ol[role='list'] {
 	list-style: none;
 	padding: 0;
 }
@@ -73,7 +77,7 @@ code {
 }
 
 @media (max-width: 55em) {
-	.char-entry	{
+	.char-entry {
 		display: block;
 	}
 
